# saarthi

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  SETUP.md  build.gradle.kts  debug_hardening.py  debug_v3.py  fix_build.py  fix_crash.py  fix_final.py  fix_final_2.py  fix_final_3.py  fix_final_manual.py  fix_final_manual_2.py  fix_final_watchdog.py  fresh_crash_log.txt  gradle.properties  latest_human_log.txt  scratchpad_rewrite.py  scratchpad_stability.py  scratchpad_telemetry.py  scratchpad_unstable.py  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build_apk.yml  ci.yml  release_aab.yml  release_apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/kotlin/com/saarthi/app/: AppPackageInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/packs/: kisan_seed.json
app/src/main/kotlin/com/saarthi/app/: BootReceiver.kt  GenerationSettingsViewModel.kt  MainActivity.kt  MainViewModel.kt  ManageDownloadsViewModel.kt  PaywallViewModel.kt  ReminderReceiver.kt  ResponseStyleViewModel.kt  SaarthiApp.kt  SettingsPersonalityViewModel.kt  SettingsViewModel.kt  ThemeViewModel.kt  TtsSettingsViewModel.kt  VoiceSettingsViewModel.kt
app/src/main/kotlin/com/saarthi/app/navigation/: HomeScreen.kt  MemoryScreen.kt  PaywallScreen.kt  SaarthiNavHost.kt  SettingsScreen.kt  SupportScreen.kt  VoiceSettingsScreen.kt
app/src/main/kotlin/com/saarthi/app/packs/: PackUpdateScheduler.kt  PackUpdateWorker.kt
app/src/main/kotlin/com/saarthi/app/wisdom/: WisdomNotificationScheduler.kt  WisdomSettingsViewModel.kt
app/src/main/res/drawable/: ic_saarthi_logo.xml  ic_saarthi_logo_monochrome.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app/src/test/kotlin/com/saarthi/app/: ManageDownloadsViewModelTest.kt
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApplicationConventionPlugin.kt  AndroidComposeConventionPlugin.kt  AndroidFeatureConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  HiltConventionPlugin.kt
ci/: debug.keystore
core/core-common/: build.gradle.kts
core/core-common/src/main/kotlin/com/saarthi/core/common/: BatteryOptimizationPrompt.kt  CrashReporter.kt  Dispatcher.kt  Result.kt  UseCase.kt
core/core-common/src/main/kotlin/com/saarthi/core/common/di/: CrashReporterModule.kt  DispatcherModule.kt
core/core-common/src/test/kotlin/com/saarthi/core/common/: ResultTest.kt  UseCaseTest.kt
core/core-i18n/: build.gradle.kts
core/core-i18n/src/main/kotlin/com/saarthi/core/i18n/: DailyWisdomCatalog.kt  EntitlementManager.kt  Entitlements.kt  FeatureFlags.kt  IndianStates.kt  KisanPackPreference.kt  LanguageManager.kt  OnboardingStrings.kt  PackId.kt  Personality.kt  PersonalityPreference.kt  ResponseStyleManager.kt  SettingsDetailStrings.kt  SettingsStrings.kt  SupportedLanguage.kt  ThemePreference.kt  TtsPreference.kt  VoicePackPreference.kt  WisdomNotificationPreference.kt
core/core-i18n/src/test/kotlin/com/saarthi/core/i18n/: EntitlementsTest.kt  SupportedLanguageTest.kt
core/core-inference/: build.gradle.kts
core/core-inference/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  llama_bridge_stub.cpp
core/core-inference/src/main/kotlin/com/saarthi/core/inference/: DebugLogger.kt  DeviceProfiler.kt  DownloadFailureStore.kt  FunnelTracker.kt  GenerationPreference.kt  HuggingFaceTokenManager.kt  InferenceService.kt  ModelCatalog.kt  ModelDownloadManager.kt  ModelDownloadService.kt  ModelDownloadWorker.kt  ModelIntegrityStore.kt  ModelMigrationHelper.kt  PackAdapterManager.kt  StreamingSha256.kt
core/core-inference/src/main/kotlin/com/saarthi/core/inference/di/: InferenceModule.kt
core/core-inference/src/main/kotlin/com/saarthi/core/inference/engine/: InferenceEngine.kt  InferenceEngineSelector.kt  LiteRTInferenceEngine.kt  LlamaCppBridge.kt  LlamaCppInferenceEngine.kt  MediaPipeInferenceEngine.kt
core/core-inference/src/main/kotlin/com/saarthi/core/inference/model/: DeviceProfile.kt  DownloadProgress.kt  Gemma4Config.kt  InferenceConfig.kt  LoraEntry.kt  ModelEntry.kt  PackType.kt
core/core-inference/src/main/kotlin/com/saarthi/core/inference/prompt/: SystemPromptProvider.kt
core/core-inference/src/test/kotlin/com/saarthi/core/inference/: DeviceProfilerTest.kt  FunnelTrackerTest.kt  ModelCatalogPreferenceTest.kt  ModelCatalogTest.kt  ModelDownloadManagerTest.kt  StreamingSha256Test.kt
core/core-inference/src/test/kotlin/com/saarthi/core/inference/engine/: CrashDiagnosisTest.kt  GpuAdmissionPolicyTest.kt  InferenceEngineSelectorTest.kt  RepetitionLoopTest.kt
core/core-inference/src/test/kotlin/com/saarthi/core/inference/model/: ModelEntryTest.kt
core/core-inference/src/test/kotlin/com/saarthi/core/inference/prompt/: SystemPromptProviderTest.kt
core/core-memory/: build.gradle.kts
core/core-memory/schemas/com.saarthi.core.memory.db.SaarthiDatabase/: 3.json  4.json  5.json
core/core-memory/src/main/kotlin/com/saarthi/core/memory/db/: ChatSessionDao.kt  ChatSessionEntity.kt  ConversationDao.kt  ConversationEntity.kt  MemoryDao.kt  MemoryEntity.kt  RagChunkDao.kt  RagChunkEntity.kt  SaarthiDatabase.kt
core/core-rag/: build.gradle.kts
core/core-rag/src/main/kotlin/com/saarthi/core/rag/: Bm25Retriever.kt  RagPipeline.kt
core/core-rag/src/test/kotlin/com/saarthi/core/rag/: Bm25RetrieverTest.kt  RagPipelineTest.kt
core/core-ui/: build.gradle.kts
docs/: PRIVACY_POLICY.md  PRODUCTION.md  RELEASE_CHECKLIST.md  kisan-pack-schema-v2.md
docs/packs-release/: FIRST_RELEASE.md  kisan_pack.json  make-manifest.sh  manifest.json
feature/feature-assistant/: build.gradle.kts
feature/feature-fieldexpert/: build.gradle.kts
feature/feature-kisan/: build.gradle.kts
feature/feature-knowledge/: build.gradle.kts
feature/feature-money/: build.gradle.kts
feature/feature-onboarding/: build.gradle.kts
gradle/: libs.versions.toml
(+90 files in other folders)
